--- a/1_introduction/1_motivation.tex
+++ b/1_introduction/1_motivation.tex
@@ -37,4 +37,24 @@ Por todo esto, existe la necesidad para el profesor de obtener de manera automá
 
 %Este trabajo muestra el desarrollo de nuestra investigación para la evaluación del desempeño en la aplicación de  compentencias genéricas por parte de los estudiantes en su interacción con los diferentes entornos de aprendizaje virtual que se utilizan en la docencia. Por tanto, esta tesis se centra en la discusión sobre cómo la ingenieria dirigida por modelos nos puede ayudar a obtener los indicadores de dichos entornos de aprendizaje virtual.
 
+%------------------------------------
+% Introducción incluyendo DBR
+%------------------------------------
+
+\subsection{Design-based research}
+
+Comienza Diana Laurillard en su libro \emph{Teaching as a Design Science} comparando la enseñanza con el arte. En ambas, tanto el artista como el profesor han de inspirar y entusiasmar a su audiencia. Pero al contrario de lo que ocurre en el arte, en la enseñanza hay que ceñirse a una serie de objetivos formalmente previamente definidos. La enseñanza no es una ciencia teórica que describe y explica algunos aspectos del mundo social y natural, sino una más cercana a otro tipo de ciencias tales como la ingenieria, la informática o la arquitectura, cuyo objetivo es hacer un mundo mejor, es decir, una ciencia del diseño. En la ciencia del diseño se parte de la teoría, pero se construyen principios de diseño en lugar de nuevas teorías y se utilizan métodos prácticos en lugar de explicaciones. Su objetivo es ir mejorando con la práctica, basándose en principios, construyendo sobre el trabajo de otros.
+
+La idea de que la educación pueda ser tratada como una ciencia de diseño viene de la década de los 90, con la ambición de llevar la investigación educacional de los laboratorios a la práctica. Para hacer eso, los investigadores educacionales tenían que enfrentarse a \emph{la complejidad de las situaciones del mundo real y su resistencia al control experimental}~\cite{collins2004design}. Cuando un profesor o investigador educacional adopta un método innovador para implementarlo en sus clases, este absorobido por el proceso normal de enseñanza, de forma que la implementación real puede convertirse en algo muy diferente del diseño original, es decir, hay un abismo entre las investigación y la práctica en la educación formal~\cite{anderson2012design}. La solución fue diseñar una metodología de \emph{investigación del diseño} (DBR, del inglés, design-based research) que no es clásicamente experimental, sino iterativa, progresivamente refinando el diseño inicial basado en la teoría como se implementa ahora. Según el análisis realizado por Terry Andersen y Julie Shattuck~\cite{anderson2012design}, las características que un estudio DBR de calidad debe tener son las siguientes:
+\begin{itemize}
+\item \emph{Contexto educativo real}: tener lugar en un contexto educativo real avala la validez de la investigación y asegura que los resultados puedan ser efectivamente utilizados para evaluar, informar y mejorar la práctica en, al menos, este contexto y probablemte en otros.
+\item \emph{Enfocado en el diseño y prueba de una intervención significativa}: la selección y la creación de una intervención es una tarea colaborativa que atañe a investigadores y profesores. La creación comienza con un preciso análisis del contexto local; se basa en la literatura relevante, en la teoría y en las prácticas de otros contextos; y se diseña especificamente para solventar un problema o aportar una mejorar en la practica. La intervención podría ser, por ejemplo, una actividad de aprendizaje, un tipo de evaluación, la introducción de una actividad administrativa (como un cambio en las vacaciones) o una intervención tecnológica. % the intervention may be a TYPE OF ASSESSMENT (el nuestro!)
+\item \emph{Empleo de métodos mixtos}
+\item \emph{Múltiples iteraciones}
+\item \emph{Colaboración entre investigadores y profesores}
+\item \emph{Evolución de los principios de diseño}
+\item \emph{Comparativa con la investigación basada en la acción *}
+\item \emph{Impacto práctico en las prácticas}
+\end{itemize}
+
 
