--- a/9_backmatter/references.bib
+++ b/9_backmatter/references.bib
@@ -1200,6 +1200,30 @@ author = "Leslie Borjas De Xena"
   publisher={Fundaci{\'o}n Universidad del Norte}
 }
 
+
+
+@article{collins2004design,
+  title={Design research: Theoretical and methodological issues},
+  author={Collins, Allan and Joseph, Diana and Bielaczyc, Katerine},
+  journal={The Journal of the learning sciences},
+  volume={13},
+  number={1},
+  pages={15--42},
+  year={2004},
+  publisher={Taylor \& Francis}
+}
+
+@article{anderson2012design,
+  title={Design-based research a decade of progress in education research?},
+  author={Anderson, Terry and Shattuck, Julie},
+  journal={Educational researcher},
+  volume={41},
+  number={1},
+  pages={16--25},
+  year={2012},
+  publisher={SAGE Publications}
+}
+
 @comment{jabref-meta: selector_publisher:}
 
 @comment{jabref-meta: selector_author:}
